<resources>
    <string name="app_version">v1.2b1</string>
    <string name="app_name">Grok StopClock</string>

    <string name="app_dir_name">GrokStopClock</string>
    <string name="app_settings_name">Settings</string>

    <string name="blank_time">00:00:00</string>

    <string name="time_table_header_id_text">ID</string>
    <string name="time_table_header_time_text">Time</string>

    <string name="save_time_button_text">Save Time</string>
    <string name="settings_button_text">Settings</string>
    <string name="history_button_text">History</string>

    <string name="time_format_separator">Time Display</string>
    <string name="time_format_spinner_text">Time Format</string>
    <string-array name="time_format_items">
        <item>Seconds (HH:MM:SS)</item>
        <item>10th of Sec (HH:MM:SS.t)</item>
        <item>100ths of Min (HH:MM.hh)</item>
    </string-array>

    <string name="hours_format_spinner_text">Time Format</string>
    <string-array name="hours_format_items">
        <item>12hr</item>
        <item>24hr</item>
    </string-array>

    <string name="save_file_separator">Save File</string>

    <string name="other_separator">Other</string>
    <string name="require_car_number_cb_text">Require Car Number when Saving Time?</string>

    <string name="clear_datafile_button_description">Clear datafile?</string>
    <string name="clear_datafile_button_text">Clear</string>

</resources>
