<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttonBar"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/settings_button_text"
            android:height="80dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:onClick="onSettingsButton" />

        <Button
            android:id="@+id/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_button_text"
            android:height="80dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:onClick="onHistoryButton" />

        <Button
            android:id="@+id/export_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_button_text"
            android:height="80dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:onClick="onExportButton" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clock_time"
        android:text="@string/blank_time"
        android:textSize="80sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        android:singleLine="true"
        android:layout_below="@+id/buttonBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/clock_time"
        android:layout_above="@+id/save_time_button"
        android:id="@+id/time_table">
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_time_button_text"
        android:id="@+id/save_time_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:height="100dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:onClick="onSaveTimeButton" />

</RelativeLayout>
